--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -1,37 +1,45 @@
     @import url('https://fonts.googleapis.com/css2?family=K2D:wght@500&display=swap');
-
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
-body {
-    min-height: 100vh;
-}
-
-.web .payload {
-    min-height: 75vh;
-}
-
-html, body, .web, .payload {
-    background: #FFFFFF;
-    -webkit-transition: all 0.1s linear;
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    body {
+        min-height: 100vh;
+    }
+    
+    .web .payload {
+        min-height: 75vh;
+    }
+    
+    html,
+    body,
+    .web,
+    .payload {
+        background: #FFFFFF;
+        -webkit-transition: all 0.1s linear;
         -moz-transition: all 0.1s linear;
-            transition: all 0.1s linear;
-}
-
-body, input, button, textarea, select, option, pre {
-    font-family: 'K2D', sans-serif;
-    -webkit-transition: all 0.1s linear;
+        transition: all 0.1s linear;
+    }
+    
+    body,
+    input,
+    button,
+    textarea,
+    select,
+    option,
+    pre {
+        font-family: 'K2D', sans-serif;
+        -webkit-transition: all 0.1s linear;
         -moz-transition: all 0.1s linear;
-            transition: all 0.1s linear;
-}
-
-input {
-    -webkit-appearance: none;
+        transition: all 0.1s linear;
+    }
+    
+    input {
+        -webkit-appearance: none;
         appearance: none;
-}
-
-input:focus {
-    border: 0 none;
-}
+    }
+    
+    input:focus {
+        border: 0 none;
+    }
