--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -4,37 +4,30 @@
             <h1 class="new-info">Nova notícia</h1>
             <div class="new-post-inputs">
                 {{ form.hidden_tag() }}
-                    <form action="" method="post" enctype="multipart/form-data" class="form-sub">
-                        {{ form.cover_image(class_="cover_image", id="cover_image") }}
-                        <label for="cover_image" class="image-cover-select">
+                <form action="" method="post" enctype="multipart/form-data" class="form-sub">
+                    {{ form.cover_image(class_="cover_image", id="cover_image") }}
+                    <label for="cover_image" class="image-cover-select">
                           Selecionar capa da notícia &nbsp;
                           <i class="fa fa-image"></i>
                         </label>
-                        <img src="" alt="" class="image-cover">
-                        {{ form.title(placeholder="Título", class_="new-post-title") }}
-                        {{ form.subtitle(placeholder="Subtítulo", class_="new-post-subtitle") }}
-                        {{ form.pc_image(class_="pc_image") }}
-                        {{ form.pc_text(class_="new-post-text", oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10", placeholder="Digite o texto inicial..." ) }}
-                        <label for="">Seleciona a ultima imagem a ser mostrada no conteúdo da matéria</label>
-                        {{ form.pc_last_image(class_="pc_last_image") }}
-                        {{ form.pc_last_text(class_="new-post-text", oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10", placeholder="Digite o texto final..." ) }}
-                        <label id="game">Escolha o jogo referente a esta notícia&nbsp;</label>
-                        {{ form.game_id(for="game", class_="select-game") }}
-                        <label for="is-esport">Esta notícia é sobre eSports?</label>
-                        <select id="select-esports">
+                    <img src="" alt="" class="image-cover"> {{ form.title(placeholder="Título", class_="new-post-title") }} {{ form.subtitle(placeholder="Subtítulo", class_="new-post-subtitle") }} {{ form.pc_image(class_="pc_image") }} {{ form.pc_text(class_="new-post-text",
+                    oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10", placeholder="Digite o texto inicial..." ) }}
+                    <label for="">Seleciona a ultima imagem a ser mostrada no conteúdo da matéria</label> {{ form.pc_last_image(class_="pc_last_image") }} {{ form.pc_last_text(class_="new-post-text", oninput="if(this.scrollHeight > this.offsetHeight)
+                    this.rows += 1", cols="30", rows="10", placeholder="Digite o texto final..." ) }}
+                    <label id="game">Escolha o jogo referente a esta notícia&nbsp;</label> {{ form.game_id(for="game", class_="select-game") }}
+                    <label for="is-esport">Esta notícia é sobre eSports?</label>
+                    <select id="select-esports">
                             <option value="no">Não</option>
                             <option value="yes">Sim</option>
-                        </select>
-                        {{ form.is_esport(class="is-esport", id="is-esport") }}
-                        <div class="source">
-                            <label for="source-question">Esta notícia possui alguma fonte de referência?</label>
-                            <select id="source-question">
+                        </select> {{ form.is_esport(class="is-esport", id="is-esport") }}
+                    <div class="source">
+                        <label for="source-question">Esta notícia possui alguma fonte de referência?</label>
+                        <select id="source-question">
                                 <option value="no">Não</option>
                                 <option value="yes">Sim</option>
-                            </select>
-                            {{ form.source_name(class="source-name", type="name", placeholder="Coloque o nome da fonte usada como referência") }}
-                            {{ form.source_url(class="source-url", type="url", placeholder="Coloque a url da fonte usada como referência") }}
-                        </div>
+                            </select> {{ form.source_name(class="source-name", type="name", placeholder="Coloque o nome da fonte usada como referência") }} {{ form.source_url(class="source-url", type="url", placeholder="Coloque
+                        a url da fonte usada como referência") }}
+                    </div>
                     {{ form.submit(class_="submit", value="Enviar notícia" ) }}
                 </form>
             </div>
