--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -1,109 +1,84 @@
-* {
-    margin: 0;
-    padding: 0;
+.editor-container {
+  width: 100%;
+  padding: 20px 0;
+  min-height: 55vh;
+  height: max-content;
+  border-radius: 10px;
+  border: 1px solid #EAEAEA;
 }
 
-.editor {
-    width: 100%;
-    margin: 10px auto 20px auto;
-    border: 1px solid #BBC0C4;
-    border-radius: 5px;
+.editor-container .editor-options {
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+  background: #111111;
+  width: max-content;
+  height: max-content;
+  z-index: 15;
+  border-radius: 10px;
 }
 
-.editor-header {
-    width: 100%;
-    padding: 5px 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 1px solid #BBC0C4;
-    transition: all 0.2s linear;
+.editor-container .editor-options ul {
+  padding: 10px 0;
 }
 
-.editor .editor-header label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 2%;
-    background-color: #FFFFFF;
-    border: 1px solid #BBC0C4;
-    padding: 5px;
-    width: 25px;
-    height: 25px;
-    max-width: 25px;
-    max-height: 25px;
-    border-radius: 50%;
-    transition: all 0.1s linear;
+.editor-container .editor-options ul li {
+  position: relative;
+  color: #FFFFFF;
+  font-weight: 400;
+  padding: 10px 20px;
+  font-size: 14px;
+  list-style: none;
 }
 
-.editor .editor-header label:hover {
-    cursor: pointer;
-    opacity: 0.6;
+.editor-container .editor-options ul li:hover {
+  background: #333333;
+  cursor: pointer;
 }
 
-.editor .editor-header label:active {
-    background-color: #BBC0C4;
+.editor-container .editor-options ul li:active {
+  opacity: 0.7;
 }
 
-.editor .editor-header label:focus {
-    box-shadow: 0 0 0 0;
-    border: 1px solid #BBC0C4;
-    outline: 0;
+.editor-container .editor-options-background {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  visibility: hidden;
+  top: 0px;
+  left: 0px;
 }
 
-.editor .editor-header label i {
-    color: #5f6368;
+.editor-container .contents {
+  display: block;
+  width: 95%;
+  margin: 0 auto;
 }
 
-.editor .text-field {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    height: 82vh;
-    font-size: 50px;
+.editor-container .contents .added-content {
+  width: 100%;
+  margin-bottom: 20px;
+  resize: none;
+  border: none;
+  border: 1px solid #FFFFFF;
 }
 
-@media (max-width: 1025px) {
-    .editor {
-        width: 95%;
-        margin: 20px auto;
-        border: 1px solid #BBC0C4;
-        border-radius: 5px;
-    }
-    .editor .text-field {
-        display: block;
-        margin: 0 auto;
-        width: 100%;
-        height: 60vh;
-    }
-    .editor .editor-header label {
-        align-items: center;
-        justify-content: center;
-        margin: 2% 2%;
-        background-color: #FFFFFF;
-        border: 1px solid #BBC0C4;
-        padding: 5px;
-        width: 40px;
-        height: 40px;
-        max-width: 25px;
-        max-height: 25px;
-        border-radius: 50%;
-        transition: all 0.1s linear;
-    }
-    .editor .editor-header label:hover {
-        cursor: pointer;
-        opacity: 0.6;
-    }
-    .editor .editor-header label:active {
-        background-color: #BBC0C4;
-    }
-    .editor .editor-header label:focus {
-        box-shadow: 0 0 0 0;
-        border: 1px solid #BBC0C4;
-        outline: 0;
-    }
-    .editor .editor-header label i {
-        color: #5f6368;
-    }
+.editor-container .contents .added-content:hover {
+  border: 1px solid #EAEAEA;
+}
+
+.editor-container .contents .added-content:focus {
+  border: 1px solid #EAEAEA;
+  box-shadow: 0 0 5px #EAEAEA;
+  outline: none;
+}
+
+.editor-container .contents #T {
+  font-weight: 600;
+  font-size: 23px;
+}
+
+.editor-container .contents #P {
+  font-weight: 400;
+  font-size: 18px;
 }
