--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -53,6 +53,25 @@
     text-align: left;
 }
 
+.web .payload .notice p {
+  margin: 0 3px;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto 20px auto;
+  font-size: 19px;
+  text-align: left;
+}
+
+.web .payload .notice h3 {
+  margin: 0 3px;
+  max-width: 100%;
+  display: block;
+  margin: 20px auto;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: left;
+}
+
 .web .payload .notice span {
     width: 100%;
     margin: 10px auto;
