--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -1,37 +1,76 @@
-<div class="posts">
-    <div class="posts-actions">
-        <div class="new-post">
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  {% include 'components/head.html' %}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/my_posts.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/new_post.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/editor.css') }}">
+</head>
+
+<body>
+  <div class='web'>
+    {% include 'components/header.html' %}
+    <div class="payload">
+      <div class="posts">
+        <div class="posts-actions">
+          <div class="new-post">
             <h1 class="new-info">Nova notícia</h1>
             <div class="new-post-inputs">
-                {{ form.hidden_tag() }}
-                <form action="" method="post" enctype="multipart/form-data" class="form-sub">
-                    {{ form.cover_image(class_="cover_image", id="cover_image") }}
-                    <label for="cover_image" class="image-cover-select">
-                          Selecionar capa da notícia &nbsp;
-                          <i class="fa fa-image"></i>
-                        </label>
-                    <img src="" alt="" class="image-cover"> {{ form.title(placeholder="Título", class_="new-post-title") }} {{ form.subtitle(placeholder="Subtítulo", class_="new-post-subtitle") }} {{ form.pc_image(class_="pc_image") }} {{ form.pc_text(class_="new-post-text",
-                    oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10", placeholder="Digite o texto inicial..." ) }}
-                    <label for="">Seleciona a ultima imagem a ser mostrada no conteúdo da matéria</label> {{ form.pc_last_image(class_="pc_last_image") }} {{ form.pc_last_text(class_="new-post-text", oninput="if(this.scrollHeight > this.offsetHeight)
-                    this.rows += 1", cols="30", rows="10", placeholder="Digite o texto final..." ) }}
-                    <label id="game">Escolha o jogo referente a esta notícia&nbsp;</label> {{ form.game_id(for="game", class_="select-game") }}
-                    <label for="is-esport">Esta notícia é sobre eSports?</label>
-                    <select id="select-esports">
-                            <option value="no">Não</option>
-                            <option value="yes">Sim</option>
-                        </select> {{ form.is_esport(class="is-esport", id="is-esport") }}
-                    <div class="source">
-                        <label for="source-question">Esta notícia possui alguma fonte de referência?</label>
-                        <select id="source-question">
-                                <option value="no">Não</option>
-                                <option value="yes">Sim</option>
-                            </select> {{ form.source_name(class="source-name", type="name", placeholder="Coloque o nome da fonte usada como referência") }} {{ form.source_url(class="source-url", type="url", placeholder="Coloque
-                        a url da fonte usada como referência") }}
-                    </div>
-                    {{ form.submit(class_="submit", value="Enviar notícia" ) }}
-                </form>
+              <form action="" method="post" enctype="multipart/form-data" class="form-sub">
+                <label for="cover_image" class="image-cover-select">
+                  Selecionar capa da notícia &nbsp;
+                  <i class="fa fa-image"></i>
+                </label>
+                <img src="" alt="" class="image-cover" required>
+                <textarea type="text" id="header" class="new-post-title" placeholder="Título da notícia..." rows="1" required></textarea>
+                <textarea type="text" id="header" class="new-post-subtitle" placeholder="Subtítulo da notícia..." rows="1" required></textarea>
+                <div class="editor-container" oncontextmenu="return false;">
+                  <div class="contents">
+                  </div>
+                  <div class="editor-options">
+                    <ul>
+                      <li id="add-title"><i class="fas fa-heading"></i></i>&nbsp;&nbsp;&nbsp;Adicionar um título</li>
+                      <li id="add-paragraph"><i class="fas fa-paragraph"></i>&nbsp;&nbsp;&nbsp;Adicionar um paragrafo</li>
+                      <li id="add-list"><i class="fas fa-list"></i>&nbsp;&nbsp;&nbsp;Adicionar uma lista</li>
+                      <li id="add-image"><i class="far fa-image"></i>&nbsp;&nbsp;&nbsp;Adicionar uma imagem</li>
+                      <li id="add-youtube-video"><i class="fab fa-youtube"></i>&nbsp;&nbsp;&nbsp;Adicionar um video do YouTube</li>
+                      <li id="add-twitter-post"><i class="fab fa-twitter"></i>&nbsp;&nbsp;&nbsp;Adicionar uma postagem do Twitter</li>
+                    </ul>
+                  </div>
+                  <div class="editor-options-background"></div>
+                </div>
+                  <label for="game">Escolha o jogo referente a esta notícia:</label>
+                  <select id="game" class="select-game">
+                    {% for game in choices %}
+                      <option value="{{ game.value }}">{{ game.name }}</option>
+                    {% endfor %}
+                  </select>
+                  <label for="select-esports">Esta notícia é sobre eSports?</label>
+                  <select id="select-esports">
+                    <option value="no">Não</option>
+                    <option value="yes">Sim</option>
+                  <input type="checkbox" class="is-esport" id="is-esport">
+                  <div class="source">
+                    <label for="source-question">Esta notícia possui alguma fonte de referência?</label>
+                    <select id="source-question">
+                      <option value="no">Não</option>
+                      <option value="yes">Sim</option>
+                    </select>
+                    <input type="text" class="source-name" placeholder="Nome da fonte usada como referência">
+                    <input type="url" class="source-url" placeholder="Url do site fonte">
+                  </div>
+                <button type="submit" class="submit"><i class="fas fa-paper-plane"></i> Enviar notícia</button>
+              </form>
+              <script src="{{ url_for('static', filename='javascript/newPostSubmit.js') }}"></script>
+              <script src="{{ url_for('static', filename='javascript/newPost.js') }}"></script>
             </div>
-            <script src="{{ url_for('static', filename='javascript/newPost.js') }}"></script>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+    {% include 'components/footer.html' %}
+  </div>
+</body>
+
+</html>
