--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -26,8 +26,7 @@
                 <textarea type="text" id="header" class="new-post-title" placeholder="Título da notícia..." rows="1" required></textarea>
                 <textarea type="text" id="header" class="new-post-subtitle" placeholder="Subtítulo da notícia..." rows="1" required></textarea>
                 <div class="editor-container" oncontextmenu="return false;">
-                  <div class="contents">
-                  </div>
+                  <div class="contents"></div>
                   <div class="editor-options">
                     <ul>
                       <li id="add-title"><i class="fas fa-heading"></i></i>&nbsp;&nbsp;&nbsp;Adicionar um título</li>
