--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -1,6 +1,6 @@
 .editor-container {
   width: 100%;
-  padding: 20px 0;
+  padding: 20px 0 100px 0;
   min-height: 55vh;
   height: max-content;
   border-radius: 10px;
@@ -81,4 +81,9 @@
 .editor-container .contents #P {
   font-weight: 400;
   font-size: 18px;
+}
+
+.editor-container .contents #TWT {
+  width: max-content;
+  margin: auto;
 }
