--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -27,10 +27,10 @@
 }
 
 .payload .notice .notice-body .source {
-    margin-top: 40px;
     font-size: 18px;
     width: max-content;
     display: block;
+    margin: 40px auto 0 auto;
 }
 
 .payload .notice .notice-body .source a {
@@ -81,9 +81,14 @@
 }
 
 .web .payload .notice .tweet {
-  display: block;
-  width: fit-content;
+  width: 100%;
+  height: max-content;
   margin: 0 auto 20px auto;
+  max-width: 300px;
+}
+
+.web .payload .notice .tweet .twitter-tweet {
+  height: max-content;
 }
 
 .payload .notice .notice-header {
@@ -272,7 +277,15 @@
       height: 50vw;
     }
     .web .payload .notice .tweet {
-      width: 90%;
+      width: 100%;
+      height: max-content;
+      margin: 0 auto 20px auto;
+      max-width: 300px;
+    }
+    .web .payload .notice .tweet .twitter-tweet {
+      height: max-content;
+
+      margin: none;
     }
     .web .payload .more-notices .notices-in-more {
         display: block;
